# Structuraa-App

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  rustfmt.toml
assets/: reset.scss  styles.scss
src/: main.rs
src/components/: actionbar.rs  editor.rs  footer.rs  header.rs  icons.rs  layout.rs  mod.rs  sidebar.rs  toolbar.rs  topbar.rs
