[package]
name = "structuraa-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
dioxus = { version = "0.6.3", features = ["ssr"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

